infrastructure/scheduling/keda/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keda
  labels:
    app.kubernetes.io/name: keda
    app.kubernetes.io/component: autoscaling
