infrastructure/scheduling/keda/ingress-paperless-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-tailscale
  namespace: keda
  annotations:
    tailscale.com/tags: "tag:k8s-operator"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: keda-add-ons-http-interceptor-proxy
      port:
        number: 8080
  tls:
    - hosts:
        - paperless
